# trading-bot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  STRATEGY.md  docker-compose.azure.yml  pyproject.toml
.github/workflows/: deploy.yml
frontend/: .dockerignore  Dockerfile  package.json  server.ts
frontend/public/: styles.css
frontend/src/: App.tsx  api.ts  main.tsx
scripts/: andrea_amd_backtest.py  andrea_backtest.py  andrea_quality_backtest.py  backfill_ibkr_metadata.py  bollinger_backtest.py  csm_backtest.py  csm_backtest_721.py  data_fix_ohlc.py  data_fix_remaining.py  data_investigate_ohlc.py  data_sanity_check.py  dipbuy_backtest.py  donchian_backtest.py  dualmom_backtest.py  fetch_ibkr_bars.py  fetch_ibkr_bars_15y.py  fetch_ibkr_one_year.py  fetch_yfinance_daily.py  fetch_yfinance_one_year.py  ibs_backtest.py  lowvolmom_backtest.py  mvp_backtest.py  mvp_backtest_10_30_t120.py  mvp_backtest_10_30_t180.py  mvp_backtest_10_30_t365.py  mvp_backtest_10_30_t730.py  mvp_backtest_10_30_t90.py  mvp_backtest_6_18.py  mvp_backtest_7_21.py  mvp_backtest_8_24.py  mvp_backtest_pos2x.py  mvp_backtest_rotate.py  rsi14_backtest.py  rsi_backtest.py  run_scanner.py  sector_rotation_backtest.py  test_ibkr_connection.py  watchdog_phase_b.sh
src/trading_bot/: __init__.py  config.py  db.py  runner.py  scanner.py
src/trading_bot/api/: main.py
