[project]
name = "trading-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Carrick Cheah", email = "carrick113@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]

[project.scripts]
trading-bot = "trading_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
